updated inheritance: web content read from json file

--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
             *** My Jinja Moves ***
         </h1>
         <p>
-            How d'you like that..!?
+            How d'you like that..! Huh?
         </p>
 
     </body>
